# AutoLog

./: .gitignore  Dockerfile  Dockerfile.mac  docker-compose.mac.yml  docker-compose.yml  pyproject.toml  testing.ipynb
autolog/: config.py  test_model.py
autolog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autolog/agent/: agent.py  backend.py  prompts.py
autolog/cli/: test_main.py
autolog/storage/: embedder.py  log_store.py  vector_store.py
